learn position style

--- a/8_positon_floatsCSS/index.html
+++ b/8_positon_floatsCSS/index.html
@@ -7,25 +7,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="b3">
-
-    <div class="b4">
-
-    </div>    
-  </div>
   
-<div class="mdl"></div>
-
   <div class="b1">
     <div class="b2">
 
     </div>    
   </div>
 
+  <div class="name">Bangladesh</div>
 
 
+  <div class="b3">
+    <div class="b4">
 
+    </div>    
+  </div>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis corrupti eaque ipsum tempora dicta impedit saepe voluptates, quia dolorem porro culpa ducimus facere ea hic? Veniam praesentium hic similique doloremque.Lore' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et sint consectetur ad obcaecati aspernatur dolores adipisci, eos vitae quae. Quae quia nesciunt laboriosam natus consequuntur accusamus facilis officiis aspernatur ipsa!</p>
+
+
+  <div class="ak">Akash(CS)</div>
 
 </body>
 </html>
