float style add

--- a/8_positon_floatsCSS/index.html
+++ b/8_positon_floatsCSS/index.html
@@ -28,5 +28,14 @@
 
   <div class="ak">Akash(CS)</div>
 
+<br>
+  <hr>
+<br>
+
+<img class="img1" src="bgp.jpg" alt="interior">
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est rem animi non nesciunt, reprehenderit iusto, excepturi obcaecati consectetur at fuga, ut doloribus vel dicta error eveniet! Enim expedita autem maiores perspiciatis vel modi dolorem similique, a officiis quae odio tenetur libero, accusantium quasi veniam deserunt facere? Doloremque possimus ex maiores nostrum tempora ea exercitationem labore, quos necessitatibus dolor optio est natus doloribus quidem molestias similique soluta modi eaque aut nihil excepturi! Illo placeat neque laborum tenetur odio quisquam esse, mollitia officiis odit sit ipsum, tempora, deleniti blanditiis rem. Quae, itaque. Maiores voluptatibus amet aliquid architecto, neque nisi minus iste?</p>
+
+
+d
 </body>
 </html>
